<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 定义一个TextView来显示标题 -->

    <TextView
        android:id="@+id/uart_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="450dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/serial_con"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="16dp"
                android:text="@string/baudrate" />

            <Spinner
                android:id="@+id/sp_baudrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/baudrate"
                android:prompt="@string/baudrate_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="16dp"
                android:text="@string/data" />

            <Spinner
                android:id="@+id/sp_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/bit_data"
                android:prompt="@string/data_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="16dp"
                android:text="@string/check" />

            <Spinner
                android:id="@+id/sp_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/bit_check"
                android:prompt="@string/check_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="16dp"
                android:text="@string/stop" />

            <Spinner
                android:id="@+id/sp_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/bit_stop"
                android:prompt="@string/stop_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="750dp"
            android:layout_height="500dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvShowReceiveuart"
                android:layout_width="720dp"
                android:layout_height="240dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:background="#FFFFFF"
                android:padding="10dp"
				android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/input_parament_uart"
                    android:layout_width="600dp"
                    android:layout_height="200dp"
                    android:hint="@string/send" />

                <Button
                    android:id="@+id/btn_uart_test"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="120dp"
                    android:layout_height="80dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/uart_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp" />

</LinearLayout>